tests/cases/smoke/valid/func_expression_body.dp
func square(x: int) -> int = x * x
var y = square(3)
