tests/cases/smoke/invalid/func_invalid_name.dp
func AddNumbers(a: int, b: int) -> int = a + b
